Change publications url.

--- a/content/publication/astudillo-19-a/astudillo-19-a.bib
+++ b/content/publication/astudillo-19-a/astudillo-19-a.bib
@@ -6,11 +6,10 @@
  editor = {Chaudhuri, Kamalika and Salakhutdinov, Ruslan},
  month = {June},
  pages = {354--363},
- pdf = {http://proceedings.mlr.press/v97/astudillo19a/astudillo19a.pdf},
  publisher = {PMLR},
  series = {Proceedings of Machine Learning Research},
  title = {Bayesian Optimization of Composite Functions},
- url = {http://proceedings.mlr.press/v97/astudillo19a.html},
+ url = {http://proceedings.mlr.press/v97/astudillo19a/astudillo19a.pdf},
  volume = {97},
  year = {2019}
 }
