--- a/content/publication/astudillo-2017-multi/astudillo-2017-multi.bib
+++ b/content/publication/astudillo-2017-multi/astudillo-2017-multi.bib
@@ -19,9 +19,8 @@ or from a utility elicitation process.},
  author = {Astudillo, Raul and Frazier, Peter I},
  booktitle = {NIPS Workshop on Bayesian Optimization},
  month = {December},
- pdf = {https://bayesopt.github.io/papers/2017/41.pdf},
  title = {Multi-Attribute Bayesian Optimization under Utility Uncertainty},
- url = {https://bayesopt.github.io/},
+ url = {https://bayesopt.github.io/papers/2017/41.pdf},
  year = {2017}
 }
 
