--- a/content/publication/astudillo-2017-a/astudillo-2017-a.bib
+++ b/content/publication/astudillo-2017-a/astudillo-2017-a.bib
@@ -1,4 +1,4 @@
-@inproceedings{astudillo2017multi,
+@inproceedings{astudillo2017a,
  abstract = {We consider multi-attribute Bayesian optimization, where each design in an optimization
 problem’s feasible space is associated with a vector of attributes that can
 be evaluated via a time-consuming computer code, and each vector of attributes
@@ -19,7 +19,7 @@ or from a utility elicitation process.},
  author = {Astudillo, Raul and Frazier, Peter I},
  booktitle = {NIPS Workshop on Bayesian Optimization},
  month = {December},
- title = {Multi-Attribute Bayesian Optimization under Utility Uncertainty},
+ title = {Multi-Attribute Bayesian Optimization Under Utility Uncertainty},
  url = {https://bayesopt.github.io/papers/2017/41.pdf},
  year = {2017}
 }
