--- a/content/publication/astudillo-21-a/cite.bib
+++ b/content/publication/astudillo-21-a/cite.bib
@@ -4,6 +4,7 @@ This holds even though it might not measure densely, instead leveraging problem 
 Finally, our approach dramatically outperforms standard BO methods in several synthetic and real-world problems.},
  author = {Astudillo, Raul and Frazier, Peter I},
  booktitle = {Advances in Neural Information Processing Systems},
+ month = {December},
  title = {Bayesian Optimization of Function Networks},
  year = {2021}
 }
