--- a/content/publication/pref/cite.bib
+++ b/content/publication/pref/cite.bib
@@ -4,6 +4,7 @@
  journal = {Working Paper},
  month = {December},
  title = {Mixed Integer Linear Programming under Preference Uncertainty},
+ url = {https://github.com/RaulAstudillo06/academic-kickstart/blob/master/papers/opt_pref_uncertainty.pdf},
  year = {2021}
 }
 
