--- a/content/publication/astudillo-21-c/cite.bib
+++ b/content/publication/astudillo-21-c/cite.bib
@@ -4,6 +4,7 @@
  booktitle = {Proceedings of the 2021 Winter Simulation Conference},
  month = {December},
  title = {Thinking Inside the Box: A Tutorial on Grey-Box Bayesian Optimization},
+ url = {https://people.orie.cornell.edu/pfrazier/pub/grey_box_tutorial.pdf},
  year = {2021}
 }
 
