Fix bug in publication

--- a/content/publication/astudillo-23-a/cite.bib
+++ b/content/publication/astudillo-23-a/cite.bib
@@ -1,10 +1,8 @@
-@article{cosenza2022multi,
-  title={Multi-information source Bayesian optimization of culture media for cellular agriculture},
-  author={Cosenza, Zachary and Astudillo, Raul and Frazier, Peter I and Baar, Keith and Block, David E},
-  journal={Biotechnology and Bioengineering},
-  volume={119},
-  number={9},
-  pages={2447--2458},
-  year={2022},
-  publisher={Wiley Online Library}
+@inproceedings{astudillo2023qeubo,
+  title={qEUBO: A Decision-Theoretic Acquisition Function for Preferential Bayesian Optimization},
+  author={Astudillo, Raul and Lin, Zhiyuan Jerry and Bakshy, Eytan and Frazier, Peter},
+  booktitle={International Conference on Artificial Intelligence and Statistics},
+  pages={1093--1114},
+  year={2023},
+  organization={PMLR}
 }
