Add new publications

--- a/content/publication/astudillo-24-a/cite.bib
+++ b/content/publication/astudillo-24-a/cite.bib
@@ -1,4 +1,4 @@
-@InProceedings{buathong24a,
+@inproceedings{buathong24a,
   title = 	 {{B}ayesian Optimization of Function Networks with Partial Evaluations},
   author =       {Buathong, Poompol and Wan, Jiayue and Astudillo, Raul and Daulton, Sam and Balandat, Maximilian and Frazier, Peter I.},
   booktitle = 	 {Proceedings of the 41st International Conference on Machine Learning},
