--- a/content/publication/astudillo-24-c/cite.bib
+++ b/content/publication/astudillo-24-c/cite.bib
@@ -1,6 +1,11 @@
-@article{yang2024active,
-  title={Active Learning-Assisted Directed Evolution},
-  author={Yang, Jason and Lal, Ravi G and Bowden, James C and Astudillo, Raul and Hameedi, Mikhail A and Kaur, Sukhvinder and Hill, Matthew and Yue, Yisong and Arnold, Frances H},
-  journal={bioRxiv preprint},
-  year={2024}
+@article{cheng2024a,
+ author = {Cheng, Chu Xin and Astudillo, Raul and Desautels, Thomas and Yue, Yisong},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {A. Globerson and L. Mackey and D. Belgrave and A. Fan and U. Paquet and J. Tomczak and C. Zhang},
+ pages = {135186--135207},
+ publisher = {Curran Associates, Inc.},
+ title = {Practical {B}ayesian Algorithm Execution via Posterior Sampling},
+ url = {https://proceedings.neurips.cc/paper_files/paper/2024/file/f3c8bfcc9c2bc13a0f141cb58afc6e5a-Paper-Conference.pdf},
+ volume = {37},
+ year = {2024}
 }
