--- a/content/publication/astudillo-24-d/cite.bib
+++ b/content/publication/astudillo-24-d/cite.bib
@@ -1,6 +1,8 @@
-@article{xie2024cost,
-  title={Cost-aware Bayesian optimization via the Pandora's Box Gittins index},
-  author={Xie, Qian and Astudillo, Raul and Frazier, Peter and Scully, Ziv and Terenin, Alexander},
-  journal={arXiv preprint arXiv:2406.20062},
-  year={2024}
+@inproceedings{sha2024a,
+  author={Shah, Bhavik A. and Astudillo, Raul and Frazier, Peter I.},
+  booktitle={2024 Winter Simulation Conference (WSC)}, 
+  title={Multi-Attribute Optimization Under Preference Uncertainty}, 
+  year={2024},
+  pages={3241-3252},
+  publisher = {IEEE}
 }
