Fix issues in publication record

--- a/content/publication/astudillo-25-b/cite.bib
+++ b/content/publication/astudillo-25-b/cite.bib
@@ -1,6 +1,8 @@
-@article{yang2025steering,
-  title={Steering Generative Models with Experimental Data for Protein Fitness Optimization},
-  author={Yang, Jason and Chu, Wenda and Khalil, Daniel and Astudillo, Raul and Wittmann, Bruce J and Arnold, Frances H and Yue, Yisong},
-  journal={arXiv preprint arXiv:2505.15093},
-  year={2025}
+@article{astudillo2025preferential,
+title={Preferential Multi-Objective Bayesian Optimization},
+author={Raul Astudillo and Kejun Li and Maegan Tucker and Chu Xin Cheng and Aaron Ames and Yisong Yue},
+journal={Transactions on Machine Learning Research},
+issn={2835-8856},
+year={2025},
+url={https://openreview.net/forum?id=mjsoESaWDH}
 }
