--- a/content/publication/astudillo-17-a/cite.bib
+++ b/content/publication/astudillo-17-a/cite.bib
@@ -1,4 +1,4 @@
-@inproceedings{astudillo2017a,
+@inproceedings{astudillo2017multi,
  author = {Astudillo, Raul and Frazier, Peter I},
  booktitle = {NIPS Workshop on Bayesian Optimization},
  month = {December},
