--- a/content/publication/astudillo-19-a/cite.bib
+++ b/content/publication/astudillo-19-a/cite.bib
@@ -1,4 +1,4 @@
-@inproceedings{astudillo19a,
+@inproceedings{astudillo19bayesian,
  author = {Astudillo, Raul and Frazier, Peter I},
  booktitle = {Proceedings of the 36th International Conference on Machine Learning},
  editor = {Chaudhuri, Kamalika and Salakhutdinov, Ruslan},
@@ -6,7 +6,7 @@
  pages = {354--363},
  publisher = {PMLR},
  series = {Proceedings of Machine Learning Research},
- title = {{B}ayesian optimization of composite functions},
+ title = {Bayesian optimization of composite functions},
  url = {http://proceedings.mlr.press/v97/astudillo19a/astudillo19a.pdf},
  volume = {97},
  year = {2019}
