--- a/content/publication/astudillo-22-b/cite.bib
+++ b/content/publication/astudillo-22-b/cite.bib
@@ -1,10 +1,10 @@
 @article{cosenza2022multi,
-  title={Multi-information source Bayesian optimization of culture media for cellular agriculture},
+  title={Multi-information source {B}ayesian optimization of culture media for cellular agriculture},
   author={Cosenza, Zachary and Astudillo, Raul and Frazier, Peter I and Baar, Keith and Block, David E},
   journal={Biotechnology and Bioengineering},
   volume={119},
   number={9},
   pages={2447--2458},
   year={2022},
-  publisher={Wiley Online Library}
+  publisher={Wiley}
 }
