--- a/content/publication/astudillo-23-a/cite.bib
+++ b/content/publication/astudillo-23-a/cite.bib
@@ -1,8 +1,14 @@
 @inproceedings{astudillo2023qeubo,
-  title={qEUBO: A Decision-Theoretic Acquisition Function for Preferential Bayesian Optimization},
-  author={Astudillo, Raul and Lin, Zhiyuan Jerry and Bakshy, Eytan and Frazier, Peter},
-  booktitle={International Conference on Artificial Intelligence and Statistics},
-  pages={1093--1114},
-  year={2023},
-  organization={PMLR}
+  title={{qEUBO}: {A} decision-theoretic acquisition function for preferential {B}ayesian optimization},
+  author =       {Astudillo, Raul and Lin, Zhiyuan Jerry and Bakshy, Eytan and Frazier, Peter I},
+  booktitle = 	 {Proceedings of The 26th International Conference on Artificial Intelligence and Statistics},
+  pages = 	 {1093--1114},
+  year = 	 {2023},
+  editor = 	 {Ruiz, Francisco and Dy, Jennifer and van de Meent, Jan-Willem},
+  volume = 	 {206},
+  series = 	 {Proceedings of Machine Learning Research},
+  month = 	 {25--27 Apr},
+  publisher =    {PMLR},
+  pdf = 	 {https://proceedings.mlr.press/v206/astudillo23a/astudillo23a.pdf},
+  url = 	 {https://proceedings.mlr.press/v206/astudillo23a.html}
 }
