--- a/content/publication/astudillo-25-b/cite.bib
+++ b/content/publication/astudillo-25-b/cite.bib
@@ -1,8 +1,9 @@
-@article{astudillo2025preferential,
-title={Preferential Multi-Objective Bayesian Optimization},
-author={Raul Astudillo and Kejun Li and Maegan Tucker and Chu Xin Cheng and Aaron Ames and Yisong Yue},
-journal={Transactions on Machine Learning Research},
-issn={2835-8856},
-year={2025},
-url={https://openreview.net/forum?id=mjsoESaWDH}
+@article{yang2025active,
+  title={Active learning-assisted directed evolution},
+  author={Yang, Jason and Lal, Ravi G and Bowden, James C and Astudillo, Raul and Hameedi, Mikhail A and Kaur, Sukhvinder and Hill, Matthew and Yue, Yisong and Arnold, Frances H},
+  journal={Nature Communications},
+  volume={16},
+  number={1},
+  pages={714},
+  year={2025}
 }
