--- a/content/publication/astudillo-24-c/cite.bib
+++ b/content/publication/astudillo-24-c/cite.bib
@@ -1,10 +1,10 @@
-@article{cheng2024a,
+@article{cheng2024practical,
  author = {Cheng, Chu Xin and Astudillo, Raul and Desautels, Thomas and Yue, Yisong},
  booktitle = {Advances in Neural Information Processing Systems},
  editor = {A. Globerson and L. Mackey and D. Belgrave and A. Fan and U. Paquet and J. Tomczak and C. Zhang},
  pages = {135186--135207},
  publisher = {Curran Associates, Inc.},
- title = {Practical {B}ayesian Algorithm Execution via Posterior Sampling},
+ title = {Practical {B}ayesian algorithm execution via posterior sampling},
  url = {https://proceedings.neurips.cc/paper_files/paper/2024/file/f3c8bfcc9c2bc13a0f141cb58afc6e5a-Paper-Conference.pdf},
  volume = {37},
  year = {2024}
