--- a/content/publication/astudillo-24-d/cite.bib
+++ b/content/publication/astudillo-24-d/cite.bib
@@ -1,7 +1,7 @@
-@inproceedings{sha2024a,
-  author={Shah, Bhavik A. and Astudillo, Raul and Frazier, Peter I.},
+@inproceedings{sha2024multi,
+  author={Shah, Bhavik A and Astudillo, Raul and Frazier, Peter I},
   booktitle={2024 Winter Simulation Conference (WSC)}, 
-  title={Multi-Attribute Optimization Under Preference Uncertainty}, 
+  title={Multi-attribute optimization under preference uncertainty}, 
   year={2024},
   pages={3241-3252},
   publisher = {IEEE}
