--- a/content/publication/astudillo-24-b/cite.bib
+++ b/content/publication/astudillo-24-b/cite.bib
@@ -1,10 +1,10 @@
-@inproceedings{xie2024a,
+@inproceedings{xie2024,
  author = {Xie, Qian and Astudillo, Raul and Frazier, Peter I. and Scully, Ziv and Terenin, Alexander},
  booktitle = {Advances in Neural Information Processing Systems},
  editor = {A. Globerson and L. Mackey and D. Belgrave and A. Fan and U. Paquet and J. Tomczak and C. Zhang},
  pages = {115523--115562},
  publisher = {Curran Associates, Inc.},
- title = {Cost-aware {B}ayesian Optimization via the {P}andora's {B}ox {G}ittins index},
+ title = {Cost-aware {B}ayesian optimization via the {P}andora's {B}ox {G}ittins index},
  url = {https://proceedings.neurips.cc/paper_files/paper/2024/file/d14c355d5e88cff437a6303d2d716252-Paper-Conference.pdf},
  volume = {37},
  year = {2024}
