--- a/content/publication/astudillo-25-c/cite.bib
+++ b/content/publication/astudillo-25-c/cite.bib
@@ -1,5 +1,5 @@
 @article{astudillo2025preferential,
-title={Preferential Multi-Objective Bayesian Optimization},
+title={Preferential multi-objective {B}ayesian optimization},
 author={Raul Astudillo and Kejun Li and Maegan Tucker and Chu Xin Cheng and Aaron Ames and Yisong Yue},
 journal={Transactions on Machine Learning Research},
 issn={2835-8856},
