--- a/content/publication/astudillo-25-d/cite.bib
+++ b/content/publication/astudillo-25-d/cite.bib
@@ -1,5 +1,5 @@
 @article{yang2025steering,
-  title={Steering Generative Models with Experimental Data for Protein Fitness Optimization},
+  title={Steering generative models with experimental data for protein fitness optimization},
   author={Yang, Jason and Chu, Wenda and Khalil, Daniel and Astudillo, Raul and Wittmann, Bruce J and Arnold, Frances H and Yue, Yisong},
   journal={arXiv preprint arXiv:2505.15093},
   year={2025}
