--- a/content/publication/astudillo-25-d/cite.bib
+++ b/content/publication/astudillo-25-d/cite.bib
@@ -1,6 +1,12 @@
-@article{yang2025steering,
-  title={Steering generative models with experimental data for protein fitness optimization},
-  author={Yang, Jason and Chu, Wenda and Khalil, Daniel and Astudillo, Raul and Wittmann, Bruce J and Arnold, Frances H and Yue, Yisong},
-  journal={arXiv preprint arXiv:2505.15093},
-  year={2025}
+@article{huber2025bayesian,
+author = {Huber, Felix and Rojas-Gonzalez, Sebastian and Astudillo, Raul},
+title = {Bayesian preference elicitation for decision support in multi-objective optimization},
+journal = {Journal of Multi-Criteria Decision Analysis},
+volume = {32},
+number = {3},
+pages = {e70019},
+doi = {https://doi.org/10.1002/mcda.70019},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/mcda.70019},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/mcda.70019},
+year = {2025}
 }
