--- a/content/publication/astudillo-25-e/cite.bib
+++ b/content/publication/astudillo-25-e/cite.bib
@@ -1,4 +1,4 @@
-@article{yang2025steering,
+@inproceedings{yang2025steering,
 title={Steering generative models with experimental data for protein fitness optimization},
 booktitle={Advances in Neural Information Processing Systems},
 author={Yang, Jason and Chu, Wenda and Khalil, Daniel and Astudillo, Raul and Wittmann, Bruce J and Arnold, Frances H and Yue, Yisong},
